# email-notif-rs

./: Cargo.toml  LICENSE.md  README.md
src/: config.rs  lib.rs  send.rs
