[package]
name = "email-notif"
version = "1.0.1"
edition = "2021"
authors = ["Christopher Boyle <cbosoft@protonmail.com>"]
description = "Email notification for status of long running processes."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/cbosoft/email-notif-rs"
repository = "https://github.com/cbosoft/email-notif-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "email_notif"

[dependencies]
lettre = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
